Don't crash if remoteArguments is called when there isn't a mainwindow

This isn't perfect: if you're fast enough you can still start a
couple of Krita processes even if application process sharing is
enabled. That can't be helped, though.

BUG:415794